--- a/example/package.json
+++ b/example/package.json
@@ -14,7 +14,8 @@
 		"babel-jest": "19.0.0",
 		"babel-preset-react-native": "1.9.1",
 		"jest": "19.0.0",
-		"react-test-renderer": "15.4.2"
+		"react-test-renderer": "15.4.2",
+		"react-native-expand": "git@github.com:hejiaji/react-native-expand.git"
 	},
 	"jest": {
 		"preset": "react-native"
