--- a/example/package.json
+++ b/example/package.json
@@ -15,7 +15,8 @@
 		"babel-preset-react-native": "1.9.1",
 		"jest": "19.0.0",
 		"react-test-renderer": "15.4.2",
-		"react-native-expand": "git@github.com:hejiaji/react-native-expand.git"
+		"react-native-expand": "git@github.com:hejiaji/react-native-expand.git",
+		"react-native-calendar": "git@github.com:hejiaji/react-native-calendar.git"
 	},
 	"jest": {
 		"preset": "react-native"
