--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A expandable component for React Native",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -16,13 +16,16 @@
     "url": "https://github.com/hejiaji/react-native-expand/issues"
   },
   "homepage": "https://github.com/hejiaji/react-native-expand#readme",
+  "dependencies": {
+    "react": "15.3.2",
+    "react-native": "^0.35.0"
+  },
   "devDependencies": {
     "babel-eslint": "4.1.6",
     "eslint": "3.7.1",
     "eslint-config-airbnb": "12.0.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "6.4.0",
-    "react": "15.3.2",
-    "react-native": "^0.35.0"
+    "eslint-plugin-import": "1.16.0"
   }
 }
