--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
     "url": "https://github.com/hejiaji/react-native-expand/issues"
   },
   "homepage": "https://github.com/hejiaji/react-native-expand#readme",
-  "dependencies": {
-    "react": "15.3.2",
-    "react-native": "^0.35.0"
-  },
   "devDependencies": {
+    "react": "15.3.2",
+    "react-native": "^0.35.0",
     "babel-eslint": "4.1.6",
     "eslint": "3.7.1",
     "eslint-config-airbnb": "12.0.0",
